# RAG

./: .gitignore  1_RAGnotes.md  2_RAGnotes.md  3_RAGnotes.md  app.py  main.py  pyproject.toml  requirements.txt
faiss_store/: faiss.index  metadata.pkl
notebook/: 1_document.ipynb  2_pdf_loader.ipynb
src/: search.py
