[project]
name = "03-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "ipykernel>=7.2.0",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.2",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "typesense>=2.0.0",
]
